apps/k8s/knarr/sabnzb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd-ingress
  namespace: knarr
  annotations:
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/target: "14dba35c-b082-4cf5-8319-05b87f07357c.cfargotunnel.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "SABnzbd"
    gethomepage.dev/group: "Downloads"
    gethomepage.dev/icon: "sabnzbd.png"
    gethomepage.dev/description: "Usenet downloader"
spec:
  rules:
  - host: sabnzbd.yggdrasil.rip
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sabnzbd
            port:
              number: 80
